fix btn + mob mouvement